--- a/index-content.html
+++ b/index-content.html
@@ -546,10 +546,10 @@
                                     <var class="atc_date_start">2016-04-09 16:30:00</var>
                                     <var class="atc_date_end">2016-04-09 24:00:00</var>
                                     <var class="atc_timezone">America/Toronto</var>
-                                    <var class="atc_title">Becky and Richard's Wedding</var>
+                                    <var class="atc_title">Karthikeyan and Rathika's Wedding</var>
                                     <var class="atc_description">We are happy that you are able to make it to our wedding on April 9th, 2016 @ 4:30pm</var>
                                     <var class="atc_location">8905 Bathurst St. Richmond Hill, ON L4C 0H4</var>
-                                    <var class="atc_organizer">Becky and Richard</var>
+                                    <var class="atc_organizer">Karthikeyan and Rathika</var>
                                     <var class="atc_organizer_email">berichinlove@gmail.com</var>
                                 </var>
                             </span>
