--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>You are invited !</title>
-        <meta name="description" content="Becky and Richard are getting married!">
+        <meta name="description" content="Karthikeyan & Rathika are getting married!">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
         
           <!--[if lte IE 9]>
@@ -113,7 +113,7 @@
         <div class="preload-images">
             <img src="assets/images/rsvp_background.jpg" height="1" width="1">
             <img id="thumb-icon" class="br-rsvp__intro_content-title_img" src="assets/br-title_large.png" title="Karthikeyan & Rathika">
-            <img src="assets/images/rsvp_bride-img.png"  alt="Becky Park">
+            <!-- <img src="assets/images/rsvp_bride-img.png"  alt="Becky Park">
             <img src="assets/images/rsvp_groom-img.png" alt="Richard Chang">
             <img src="assets/images/rsvp__0001_andrew.png"  class="br-rsvp__bridalParty-person_img" rel="Andrew">
             <img src="assets/images/rsvp__0008_suzie.png" class="br-rsvp__bridalParty-person_img" rel="Suzie">
@@ -136,7 +136,7 @@
             <img src="assets/images/engagement/engagement-10.jpg" class="br-rsvp__engagement-photo_img" rel="Engagement Photo">
             <img src="assets/images/engagement/engagement-11.jpg" class="br-rsvp__engagement-photo_img" rel="Engagement Photo">
             <img src="assets/images/engagement/engagement-12.jpg" class="br-rsvp__engagement-photo_img" rel="Engagement Photo">
-            <img src="assets/images/engagement/engagement-13.jpg" class="br-rsvp__engagement-photo_img" rel="Engagement Photo">
+            <img src="assets/images/engagement/engagement-13.jpg" class="br-rsvp__engagement-photo_img" rel="Engagement Photo"> -->
         </div>
         
         <script src="assets/scripts/vendor.min.js"></script>
