--- a/index-content.html
+++ b/index-content.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
         <script>
             // Set the date we're counting down to
-            var countDownDate = new Date("Feb 23, 2019 00:42:25").getTime();
+            var countDownDate = new Date("Feb 18, 2019 04:00:25").getTime();
 
             // Update the count down every 1 second
             var x = setInterval(function() {
@@ -81,7 +81,7 @@
                         </div>
                        <!--  <button id="hero-rsvp-btn" class="btn btn-lg btn-styleoff btn-brstyle-outline br-rsvp__rsvp-form_btn br-rsvp__intro_btn hidden-xs" title="RSVP" data-toggle="modal" data-target="#rsvp-form-modal" onclick="ga(&#39;send&#39;, {hitType: &#39;event&#39;,eventCategory: &#39;rsvp-form&#39;, eventAction: &#39;click&#39;, eventLabel: &#39;hero-btn&#39;});">RSVP Now</button> -->
                         <!-- <div class="br-rsvp__intro_content-title-subtitle visible-xs">April 9, 2016</div> -->
-                        <h1 id="demo"></h1>s
+                        <h1 id="demo"></h1>
                     </div>
                 </div>
                 <div class="br-rsvp__intro_footer">
