--- a/index-content.html
+++ b/index-content.html
@@ -300,7 +300,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="col-sm-6 col-lg-5 col-lg-offset-1">
                             <div class="br-rsvp__venue-bucket time-3 ">
                                 <i class="icon-br icon-br-meal br-rsvp__venue-icon"></i>
@@ -323,7 +323,7 @@
                                 </p>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </section>
             <!-- <section id="registry" class="br-rsvp__registry" rel="js-br-rsvp__registry">
