--- a/index-content.html
+++ b/index-content.html
@@ -77,9 +77,7 @@
                 <div class="container">
                     <div class="br-rsvp__intro_content">
                         <div class="br-rsvp__intro_content-title">
-                            <!-- <img id="thumb-icon" class="br-rsvp__intro_content-title_img" src="./index-content_files/br-title_large.png" title="Karthikeyan & Rathika"> -->
-                            <p style="color: white;font: 500 100px/0.8 'Edwardian Script ITC', Helvetica, sans-serif;transform: rotate(-25deg);margin-bottom: 23%;">
-                            Karthikeyan <br> &amp; <br> Rathika</p>
+                            <img id="thumb-icon" class="br-rsvp__intro_content-title_img" src="./index-content_files/br-title_large.png" title="Karthikeyan & Rathika">
                         </div>
                        <!--  <button id="hero-rsvp-btn" class="btn btn-lg btn-styleoff btn-brstyle-outline br-rsvp__rsvp-form_btn br-rsvp__intro_btn hidden-xs" title="RSVP" data-toggle="modal" data-target="#rsvp-form-modal" onclick="ga(&#39;send&#39;, {hitType: &#39;event&#39;,eventCategory: &#39;rsvp-form&#39;, eventAction: &#39;click&#39;, eventLabel: &#39;hero-btn&#39;});">RSVP Now</button> -->
                         <!-- <div class="br-rsvp__intro_content-title-subtitle visible-xs">April 9, 2016</div> -->
