--- a/invite/index-content.html
+++ b/invite/index-content.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
         <script>
             // Set the date we're counting down to
-            var countDownDate = new Date("Feb 18, 2019 04:00:25").getTime();
+            var countDownDate = new Date("Feb 6, 2019 16:30:00").getTime();
 
             // Update the count down every 1 second
             var x = setInterval(function() {
@@ -62,8 +62,8 @@
                     </li>
                   </ul>
                   <ul class="nav navbar-nav navbar-right">
-                    <li class="br-rsvp__nav_link link-venue"><a id="nav-venue" href="#" data-slide-to="venue" onclick="ga(&#39;send&#39;, {hitType: &#39;event&#39;,eventCategory: &#39;nav&#39;, eventAction: &#39;click&#39;, eventLabel: &#39;venue&#39;});">Marriage</a></li>
-                    <li class="br-rsvp__nav_link link-registry"><a id="nav-registry" href="http://berichinlove.com/index-content.html#" data-slide-to="registry" onclick="ga(&#39;send&#39;, {hitType: &#39;event&#39;,eventCategory: &#39;nav&#39;, eventAction: &#39;click&#39;, eventLabel: &#39;registry&#39;});">Reception</a></li>
+                    <!-- <li class="br-rsvp__nav_link link-venue"><a id="nav-venue" href="#" data-slide-to="venue" onclick="ga(&#39;send&#39;, {hitType: &#39;event&#39;,eventCategory: &#39;nav&#39;, eventAction: &#39;click&#39;, eventLabel: &#39;venue&#39;});">Marriage</a></li> -->
+                    <li class="br-rsvp__nav_link link-registry"><a id="nav-registry" href="#" data-slide-to="registry" onclick="ga(&#39;send&#39;, {hitType: &#39;event&#39;,eventCategory: &#39;nav&#39;, eventAction: &#39;click&#39;, eventLabel: &#39;registry&#39;});">Reception</a></li>
                    </ul>     
                 </div><!--/.nav-collapse -->
             </div>
@@ -102,7 +102,7 @@
                     <div class="col-sm-12 br-rsvp__content text-center">
                         <div class="well br-rsvp__copy">
                             <h1>We’re getting married !</h1>
-                            <p>We joyfully invite you to share our happiness as we unite in marriage on  Feb 18th, 2019.</p>
+                            <p>We joyfully invite you to share our happiness as we unite in marriage on  Feb 6th, 2019.</p>
 
                              <div class="br-slide-img br-rsvp__bridalParty-person bridesmaid" data-filter-item="bridesmaid">
                             <div class="br-rsvp__bridalParty-person_img">
@@ -118,55 +118,14 @@
         <div class="br-rsvp__agenda bg-white">  
             <span class="intro-end-hook"></span>
             <span class="br-rsvp__additional-hook"></span>
-            <section id="venue" class="br-rsvp__venue" rel="js-br-rsvp__venue">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-12 br-rsvp__content">
-                            <div class="well br-rsvp__copy">
-                                <span class="br-rsvp__copy-title">Marriage</span>
-                                    <h1>Arulmigu Pathirakali Amman Temple</h1>
-                                    <p>Chinnaputhur, Dharapuram Tamil Nadu ( <a href="https://goo.gl/maps/JfD1FDajSur" target="_blank"> Google Map </a> )</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row" style="margin-bottom: 10%;">
-                        <div class="col-sm-8 col-lg-6">
-                            <div style="max-width:100%;list-style:none; transition: none;overflow:hidden;width:auto;height:400px;">
-                                <div id="mymap-display" style="height:100%; width:100%;max-width:100%;">
-                                    <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Pathrakaliyamman+Temple,+Chinnaputhur,+dharapuram&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
-                                    </iframe>
-                                </div>
-
-                                <a class="embed-maphtml" href="https://www.embed-map.com" id="authorizemap-data">https://www.embed-map.com</a>
-                                <style>#mymap-display img.text-marker{max-width:none!important;background:none!important;}img{max-width:none}</style>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-12 col-lg-6">
-                            <div class="br-rsvp__venue-bucket time-2 ">
-                                <i class="icon-br icon-br-ring br-rsvp__venue-icon"></i>
-                                <h5 class="br-rsvp__venue-subtitle">
-                                     <span class="time">4:00 AM to 6:00 AM</span> - <span class="description">Ceremony</span>
-                                </h5>
-                                <p class="br-rsvp__venue-description">
-                                    The ceremony will be held indoors at the Pathirakali Amman Temple. Please arrive 15 minutes earlier.
-                                </p>
-                            </div>
-
-                            <!-- <h4 class="display-4" style="text-decoration: underline;">Google Maps</h4>
-                            <p>Do Locate the Mandapam with Google Maps for easy Navigation from anywhere like taking a bite of cake.</p> -->
-                        </div>
-                    </div>
-                </div>
-            </section>
             <section id="registry" class="br-rsvp__registry" rel="js-br-rsvp__registry">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 br-rsvp__content">
                             <div class="well br-rsvp__copy">
                                 <span class="br-rsvp__copy-title">Reception</span>
-                                    <h1>Nachumuthu Gounder Sarojini Ammal Mahal</h1>
-                                    <p>Kartumadam, Udumalpet Tamil Nadu ( <a href="https://goo.gl/maps/f3nZaTrZTVm" target="_blank"> Google Map </a> )</p>
+                                    <h1>The Church Of <span class="br-rsvp__guestSignIn_logo-text-bold">JESUS CHRIST</span> Of Latter-Day Saints</h1>
+                                    <p>Little Mount, Chennai Tamil Nadu ( <a href="https://goo.gl/maps/VDEDpmVQfx62" target="_blank"> Google Map </a> )</p>
                             </div>
                         </div>
                     </div>
@@ -175,17 +134,26 @@
                             <div class="br-rsvp__venue-bucket time-1 ">
                                 <i class="icon-br icon-br-champaign br-rsvp__venue-icon"></i>
                                 <h5 class="br-rsvp__venue-subtitle br-rsvp__venue-bucket_schedule">
-                                     <span class="time">6:00 PM To 9:00 PM</span> - <span class="description">Reception Hour</span>
+                                     <span class="time">4:30 PM</span> - <span class="description">Reception Hour</span>
                                 </h5>
                                 <p class="br-rsvp__venue-description">
-                                    The Reception will follow on Sunday Feb 17 2019 at Nachumuthu Gounder Sarojini Ammal Mahal opposite to GKN Higher Secondary School Karattumadam, Udumalpet.
+                                    The cocktail hour will immediately follow on Wed Feb 06 2019. Please enjoy a cocktail (or two!) and some savoury treats while we take professional group pictures with our attendees.
                                 </p>
                             </div>
                         </div>
+<!-- 
+https://www.google.com/maps/place/The+Church+of+Jesus+Christ+of+Latter-Day+Saints/@13.0132057,80.2305224,17z/data=!4m13!1m7!3m6!1s0x3a5267a01399741d:0xadf433a4d397056f!2sChennai,+Tamil+Nadu+600025!3b1!8m2!3d13.0132057!4d80.2327111!3m4!1s0x3a52641ebf67f52d:0x5d1a076bb23070fb!8m2!3d13.0148361!4d80.2264059
+
+
+https://www.google.com/maps/embed/v1/place?q=The+Church+of+Jesus+Christ+of+Latter-Day+Saints,+west+saidapet,+Chennai&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8
+
+
+Old No. 8, New No. 23, Taluk Office Rd, Little Mount, West Saidapet, Chennai, Tamil Nadu 600025 -->
+
                         <div class="col-sm-12 col-lg-6">
                             <div style="max-width:100%;list-style:none; transition: none;overflow:hidden;width:auto;height:400px;">
                                 <div id="mymap-display" style="height:100%; width:100%;max-width:100%;">
-                                    <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=GKN+Higher+Secondary+School,+Karattumadam,+Udumalpet&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
+                                    <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=The+Church+of+Jesus+Christ+of+Latter-Day+Saints,+west+saidapet,+Chennai&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
                                     </iframe>
                                 </div>
 
