--- a/invite/index-content.html
+++ b/invite/index-content.html
@@ -124,7 +124,7 @@
                         <div class="col-sm-12 br-rsvp__content">
                             <div class="well br-rsvp__copy">
                                 <span class="br-rsvp__copy-title">Reception</span>
-                                    <h1>The Church Of <span class="br-rsvp__guestSignIn_logo-text-bold">JESUS CHRIST</span> Of Latter-Day Saints</h1>
+                                    <h1>The Church Of JESUS CHRIST Of Latter-Day Saints</h1>
                                     <p>Little Mount, Chennai Tamil Nadu ( <a href="https://goo.gl/maps/VDEDpmVQfx62" target="_blank"> Google Map </a> )</p>
                             </div>
                         </div>
