--- a/invite/index.html
+++ b/invite/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>You are invited !</title>
-        <meta name="description" content="Karthikeyan and Rathika are getting married!">
+        <meta name="description" content="Prasanna and Sarthi are getting married!">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
 
         <!-- Font Styles -->
