--- a/invite/index-content.html
+++ b/invite/index-content.html
@@ -74,7 +74,7 @@
                 <div class="container">
                     <div class="br-rsvp__intro_content">
                         <div class="br-rsvp__intro_content-title">
-                            <img id="thumb-icon" class="br-rsvp__intro_content-title_img" src="./index-content_files/br-title_large.png" title="Prasanna & Sarthi">
+                            <img id="thumb-icon" class="br-rsvp__intro_content-title_img" src="./index-content_files/br-title_large.png" title="Prasanna & Aarthi">
                             <!-- <p style="color: white;font: 500 100px/0.8 'Edwardian Script ITC', Helvetica, sans-serif;transform: rotate(-25deg);margin-bottom: 23%;">
                             Karthikeyan <br> &amp; <br> Rathika</p> -->
                         </div>
